swagger collectionFormat(multi)
